@@ -52,7 +52,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
@@ -62,14 +62,14 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """
@@ -86,7 +86,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                   id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   compileOnly 'org.openrewrite:rewrite-java:7.0.0'
                   runtimeOnly 'org.openrewrite:rewrite-java:7.0.0'
@@ -97,7 +97,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                   id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       runtimeOnly('com.fasterxml.jackson.core:jackson-core:2.12.5') {
@@ -107,7 +107,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   compileOnly 'org.openrewrite:rewrite-java:7.0.0'
                   runtimeOnly 'org.openrewrite:rewrite-java:7.0.0'
               }
@@ -123,38 +123,38 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             spec.recipe(new UpgradeTransitiveDependencyVersion(
               "com.thoughtworks.xstream", "xstream", "1.4.21", null, null, null)),
           buildGradle(
-            String.format("""
+            """
               plugins {
                   id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       %1$s 'com.thoughtworks.xstream:xstream:1.4.17'
                   }
               }
-              
+
               dependencies {
                   %1$s 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.2.0'
               }
-              """, configurationName),
-            String.format("""
+              """.formatted(configurationName),
+            """
               plugins {
                   id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       %1$s 'com.thoughtworks.xstream:xstream:1.4.21'
                   }
               }
-              
+
               dependencies {
                   %1$s 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.2.0'
               }
-              """, configurationName)
+              """.formatted(configurationName)
           )
         );
     }
@@ -184,7 +184,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                   constraints {
                       compileOnly('org.apache.commons:commons-lang3:3.14.0')
                   }
-              
+
                   compileOnly 'org.apache.activemq:artemis-jakarta-server:2.28.0'
               }
               """
@@ -202,7 +202,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
               }
               configurations.create("foo")
               repositories { mavenCentral() }
-              
+
               dependencies {
                   foo 'org.openrewrite:rewrite-java:7.0.0'
               }
@@ -213,14 +213,14 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
               }
               configurations.create("foo")
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       foo('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   foo 'org.openrewrite:rewrite-java:7.0.0'
               }
               """
@@ -242,7 +242,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                   }
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   foo 'org.openrewrite:rewrite-java:7.0.0'
               }
@@ -260,7 +260,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
                   implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.9'
@@ -271,14 +271,14 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
                   implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.9'
               }
@@ -296,7 +296,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
                   runtimeOnly 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.9'
@@ -307,14 +307,14 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
                   runtimeOnly 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.9'
               }
@@ -333,7 +333,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'ear'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
                   runtimeOnly 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.9'
@@ -346,7 +346,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'ear'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       earlib('com.fasterxml.jackson.core:jackson-core:2.12.5') {
@@ -356,7 +356,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
                   runtimeOnly 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.9'
                   earlib 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.9'
@@ -373,28 +373,28 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation('com.fasterxml.jackson.core:jackson-core:2.12.0') {
                           because 'some reason'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """,
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """
@@ -402,40 +402,40 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
         );
     }
 
-    @Test
     @Disabled("String interpolation with inline properties is not yet supported")
+    @Test
     void updateConstraintGStringInterpolation() {
         rewriteRun(
           buildGradle(
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
-              def jacksonCoreVersion = "2.12.0"
-              
+
+              def jacksonVersion = "2.12.0"
+
               dependencies {
                   constraints {
-                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonCoreVersion") {
+                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {
                           because 'some reason'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """,
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
-              def jacksonCoreVersion = "2.12.5"
-              
+
+              def jacksonVersion = "2.12.5"
+
               dependencies {
                   constraints {
-                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonCoreVersion") {
+                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """
@@ -448,10 +448,10 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
         rewriteRun(
           properties(
             """
-              jacksonCoreVersion=2.12.0
+              jacksonVersion=2.12.0
               """,
             """
-              jacksonCoreVersion=2.12.5
+              jacksonVersion=2.12.5
               """,
             spec -> spec.path("gradle.properties")
           ),
@@ -459,28 +459,28 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
-                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonCoreVersion") {
+                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {
                           because 'some reason'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """,
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
-                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonCoreVersion") {
+                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """
@@ -493,10 +493,10 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
         rewriteRun(
           properties(
             """
-              jacksonCoreVersion=2.12.0
+              jacksonVersion=2.12.0
               """,
             """
-              jacksonCoreVersion=2.12.5
+              jacksonVersion=2.12.5
               """,
             spec -> spec.path("gradle.properties")
           ),
@@ -504,28 +504,28 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
-                      implementation group: "com.fasterxml.jackson.core", name: "jackson-core", version: jacksonCoreVersion, {
+                      implementation group: "com.fasterxml.jackson.core", name: "jackson-core", version: jacksonVersion, {
                           because 'some reason'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """,
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
-                      implementation group: "com.fasterxml.jackson.core", name: "jackson-core", version: jacksonCoreVersion, {
+                      implementation group: "com.fasterxml.jackson.core", name: "jackson-core", version: jacksonVersion, {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """
@@ -538,10 +538,10 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
         rewriteRun(
           properties(
             """
-              jacksonCoreVersion=2.12.0
+              jacksonVersion=2.12.0
               """,
             """
-              jacksonCoreVersion=2.12.5
+              jacksonVersion=2.12.5
               """,
             spec -> spec.path("gradle.properties")
           ),
@@ -551,15 +551,15 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 `java-library`
               }
               repositories { mavenCentral() }
-              
-              val jacksonCoreVersion: String by project
+
+              val jacksonVersion: String by project
               dependencies {
                   constraints {
-                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonCoreVersion") {
+                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {
                           because("some reason")
                       }
                   }
-              
+
                   implementation("org.openrewrite:rewrite-java:7.0.0")
               }
               """,
@@ -568,15 +568,15 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 `java-library`
               }
               repositories { mavenCentral() }
-              
-              val jacksonCoreVersion: String by project
+
+              val jacksonVersion: String by project
               dependencies {
                   constraints {
-                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonCoreVersion") {
+                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {
                           because("CVE-2024-BAD")
                       }
                   }
-              
+
                   implementation("org.openrewrite:rewrite-java:7.0.0")
               }
               """
@@ -591,21 +591,21 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation("org.openrewrite:rewrite-core:7.0.0")
                       implementation('com.fasterxml.jackson.core:jackson-core:2.12.0')
                       implementation("org.openrewrite:rewrite-xml:7.0.0")
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """,
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation("org.openrewrite:rewrite-core:7.0.0")
@@ -614,7 +614,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                       }
                       implementation("org.openrewrite:rewrite-xml:7.0.0")
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """
@@ -629,10 +629,10 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                   }
               }
@@ -640,10 +640,10 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                       implementation('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
@@ -662,10 +662,10 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'ear' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   earlib 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                   }
               }
@@ -673,10 +673,10 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'ear' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   earlib 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                       earlib('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
@@ -695,10 +695,10 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                       implementation('com.fasterxml.jackson.core:jackson-core') {
                           because 'security'
@@ -712,10 +712,10 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                       implementation('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
@@ -737,7 +737,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
               configurations.earlib.extendsFrom configurations.deploy
               dependencies {
                   earlib 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                   }
               }
@@ -748,7 +748,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
               configurations.earlib.extendsFrom configurations.deploy
               dependencies {
                   earlib 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                       earlib('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
@@ -769,7 +769,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
               repositories { mavenCentral() }
               dependencies {
                   deploy 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                   }
               }
@@ -778,8 +778,8 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/4228")
+    @Test
     void constraintDoesNotGetAddedInsideConstraint() {
         rewriteRun(
           spec -> spec
@@ -795,7 +795,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
               }
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                       implementation("org.apache.logging.log4j:log4j-core") {
                           version {
@@ -815,7 +815,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
               }
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
-              
+
                   constraints {
                       implementation('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
@@ -860,7 +860,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                   constraints {
                       pitest('org.apache.commons:commons-lang3:3.14.0')
                   }
-              
+
                   testImplementation 'org.apache.activemq:artemis-jakarta-server:2.28.0'
               }
               """
@@ -896,7 +896,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                       pitest('org.apache.commons:commons-lang3:3.14.0')
                       testImplementation('org.apache.commons:commons-lang3:3.14.0')
                   }
-              
+
                   testImplementation 'org.apache.activemq:artemis-jakarta-server:2.28.0'
               }
               """
@@ -914,9 +914,9 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                   id 'io.spring.dependency-management' version '1.1.5'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """,
@@ -934,9 +934,9 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                       }
                   }
               }
-              
+
               dependencies {
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """
@@ -953,7 +953,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation('com.fasterxml.jackson.core:jackson-core:2.12.0')
                   implementation('com.fasterxml.jackson.core:jackson-databind:2.12.0')
@@ -972,7 +972,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 `java-library`
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation("org.openrewrite:rewrite-java:7.0.0")
               }
@@ -982,14 +982,14 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 `java-library`
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation("com.fasterxml.jackson.core:jackson-core:2.12.5") {
                           because("CVE-2024-BAD")
                       }
                   }
-              
+
                   implementation("org.openrewrite:rewrite-java:7.0.0")
               }
               """
@@ -1004,28 +1004,28 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id("java") }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation("com.fasterxml.jackson.core:jackson-core:2.12.0") {
                           because("some reason")
                       }
                   }
-              
+
                   implementation("org.openrewrite:rewrite-java:7.0.0")
               }
               """,
             """
               plugins { id("java") }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation("com.fasterxml.jackson.core:jackson-core:2.12.5") {
                           because("CVE-2024-BAD")
                       }
                   }
-              
+
                   implementation("org.openrewrite:rewrite-java:7.0.0")
               }
               """
@@ -1043,9 +1043,9 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                   id("io.spring.dependency-management") version "1.1.5"
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
-              
+
                   implementation("org.openrewrite:rewrite-java:7.0.0")
               }
               """,
@@ -1063,123 +1063,11 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                       }
                   }
               }
-              
+
               dependencies {
-              
+
                   implementation("org.openrewrite:rewrite-java:7.0.0")
               }
-              """
-          )
-        );
-    }
-
-    @Test
-    void addConstraintUpdatesLockfile() {
-        rewriteRun(
-          buildGradle(
-            """
-              plugins {
-                id 'java'
-              }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.openrewrite:rewrite-java:7.0.0'
-              }
-              """,
-            """
-              plugins {
-                id 'java'
-              }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  constraints {
-                      implementation('com.fasterxml.jackson.core:jackson-core:2.12.5') {
-                          because 'CVE-2024-BAD'
-                      }
-                  }
-              
-                  implementation 'org.openrewrite:rewrite-java:7.0.0'
-              }
-              """
-          ),
-          lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              com.fasterxml.jackson.core:jackson-annotations:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-core:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-databind:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.dataformat:jackson-dataformat-smile:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.module:jackson-module-kotlin:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.module:jackson-module-parameter-names:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson:jackson-bom:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.ibm.icu:icu4j:61.1=runtimeClasspath,testRuntimeClasspath
-              commons-lang:commons-lang:2.6=runtimeClasspath,testRuntimeClasspath
-              io.github.classgraph:classgraph:4.8.102=runtimeClasspath,testRuntimeClasspath
-              io.micrometer:micrometer-core:1.6.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.abego.treelayout:org.abego.treelayout.core:1.0.3=runtimeClasspath,testRuntimeClasspath
-              org.antlr:ST4:4.3=runtimeClasspath,testRuntimeClasspath
-              org.antlr:antlr-runtime:3.5.2=runtimeClasspath,testRuntimeClasspath
-              org.antlr:antlr4-runtime:4.8-1=runtimeClasspath,testRuntimeClasspath
-              org.antlr:antlr4:4.8-1=runtimeClasspath,testRuntimeClasspath
-              org.glassfish:javax.json:1.0.4=runtimeClasspath,testRuntimeClasspath
-              org.hdrhistogram:HdrHistogram:2.1.12=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-reflect:1.4.21=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib-common:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains:annotations:20.1.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.latencyutils:LatencyUtils:2.0.3=runtimeClasspath,testRuntimeClasspath
-              org.openrewrite:rewrite-core:7.0.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.openrewrite:rewrite-java:7.0.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.ow2.asm:asm-analysis:9.1=runtimeClasspath,testRuntimeClasspath
-              org.ow2.asm:asm-tree:9.1=runtimeClasspath,testRuntimeClasspath
-              org.ow2.asm:asm-util:9.1=runtimeClasspath,testRuntimeClasspath
-              org.ow2.asm:asm:9.1=runtimeClasspath,testRuntimeClasspath
-              org.yaml:snakeyaml:1.28=runtimeClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              com.fasterxml.jackson.core:jackson-annotations:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-core:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-databind:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.dataformat:jackson-dataformat-smile:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.module:jackson-module-kotlin:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.module:jackson-module-parameter-names:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson:jackson-bom:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.ibm.icu:icu4j:61.1=runtimeClasspath,testRuntimeClasspath
-              commons-lang:commons-lang:2.6=runtimeClasspath,testRuntimeClasspath
-              io.github.classgraph:classgraph:4.8.102=runtimeClasspath,testRuntimeClasspath
-              io.micrometer:micrometer-core:1.6.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.abego.treelayout:org.abego.treelayout.core:1.0.3=runtimeClasspath,testRuntimeClasspath
-              org.antlr:ST4:4.3=runtimeClasspath,testRuntimeClasspath
-              org.antlr:antlr-runtime:3.5.2=runtimeClasspath,testRuntimeClasspath
-              org.antlr:antlr4-runtime:4.8-1=runtimeClasspath,testRuntimeClasspath
-              org.antlr:antlr4:4.8-1=runtimeClasspath,testRuntimeClasspath
-              org.glassfish:javax.json:1.0.4=runtimeClasspath,testRuntimeClasspath
-              org.hdrhistogram:HdrHistogram:2.1.12=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-reflect:1.4.21=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib-common:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains:annotations:20.1.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.latencyutils:LatencyUtils:2.0.3=runtimeClasspath,testRuntimeClasspath
-              org.openrewrite:rewrite-core:7.0.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.openrewrite:rewrite-java:7.0.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.ow2.asm:asm-analysis:9.1=runtimeClasspath,testRuntimeClasspath
-              org.ow2.asm:asm-tree:9.1=runtimeClasspath,testRuntimeClasspath
-              org.ow2.asm:asm-util:9.1=runtimeClasspath,testRuntimeClasspath
-              org.ow2.asm:asm:9.1=runtimeClasspath,testRuntimeClasspath
-              org.yaml:snakeyaml:1.28=runtimeClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
               """
           )
         );
@@ -1197,7 +1085,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
@@ -1207,14 +1095,14 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation('com.fasterxml.jackson.core:jackson-core:2.12.5') {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """
@@ -1232,7 +1120,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.springframework.boot:spring-boot-starter-tomcat:3.3.12'
               }
@@ -1242,15 +1130,82 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
                 id 'java'
               }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
                       implementation('org.apache.tomcat.embed:tomcat-embed-core:10.1.42')
                       implementation('org.apache.tomcat.embed:tomcat-embed-el:10.1.42')
                       implementation('org.apache.tomcat.embed:tomcat-embed-websocket:10.1.42')
                   }
-              
+
                   implementation 'org.springframework.boot:spring-boot-starter-tomcat:3.3.12'
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void doesNotAddRedundantConstraintWhenImplementationAlreadyHasIt() {
+        rewriteRun(
+          spec -> spec
+            .recipe(new UpgradeTransitiveDependencyVersion(
+              "com.fasterxml.jackson.core", "jackson-databind", "2.12.5", null, null, List.of("testImplementation"))),
+          buildGradle(
+            """
+              plugins {
+                  id 'java'
+              }
+              repositories { mavenCentral() }
+
+              dependencies {
+                  constraints {
+                      implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
+                  }
+
+                  implementation 'org.openrewrite:rewrite-java:7.0.0'
+                  testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void replacesTestImplementationConstraintWithImplementation() {
+        rewriteRun(
+          spec -> spec
+            .recipe(new UpgradeTransitiveDependencyVersion(
+              "com.fasterxml.jackson.core", "jackson-databind", "2.12.5", null, null, null)),
+          buildGradle(
+            """
+              plugins {
+                  id 'java'
+              }
+              repositories { mavenCentral() }
+
+              dependencies {
+                  constraints {
+                      testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
+                  }
+
+                  implementation 'org.openrewrite:rewrite-java:7.0.0'
+                  testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+              }
+              """,
+            """
+              plugins {
+                  id 'java'
+              }
+              repositories { mavenCentral() }
+
+              dependencies {
+                  constraints {
+                      implementation('com.fasterxml.jackson.core:jackson-databind:2.12.5')
+                  }
+
+                  implementation 'org.openrewrite:rewrite-java:7.0.0'
+                  testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
               }
               """
           )
@@ -1264,28 +1219,28 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
-                      implementation("com.fasterxml.jackson.core:jackson-core:${gradle.jacksonCoreVersion}") {
+                      implementation("com.fasterxml.jackson.core:jackson-core:${gradle.jacksonVersion}") {
                           because 'some reason'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """,
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   constraints {
-                      implementation("com.fasterxml.jackson.core:jackson-core:${gradle.jacksonCoreVersion}") {
+                      implementation("com.fasterxml.jackson.core:jackson-core:${gradle.jacksonVersion}") {
                           because 'CVE-2024-BAD'
                       }
                   }
-              
+
                   implementation 'org.openrewrite:rewrite-java:7.0.0'
               }
               """
@@ -1293,20 +1248,44 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
           settingsGradle(
             """
               gradle.ext {
-                  jacksonCoreVersion = '2.12.0'
+                  jacksonVersion = '2.12.0'
               }
               """,
             """
               gradle.ext {
-                  jacksonCoreVersion = '2.12.5'
+                  jacksonVersion = '2.12.5'
               }
               """
           )
         );
     }
 
-    @Value
+    @Test
+    void noChangesIfDependencyIsAlsoPresentOnProjectForVersionInSettings() {
+        rewriteRun(
+          buildGradle(
+            """
+              plugins { id 'java' }
+              repositories { mavenCentral() }
+
+              dependencies {
+                  implementation "com.fasterxml.jackson.core:jackson-core:${gradle.jacksonVersion}"
+                  implementation "com.fasterxml.jackson.core:jackson-databind:${gradle.jacksonVersion}"
+              }
+              """
+          ),
+          settingsGradle(
+            """
+              gradle.ext {
+                  jacksonVersion = '2.12.0'
+              }
+              """
+          )
+        );
+    }
+
     @EqualsAndHashCode(callSuper = false)
+    @Value
     public static class ScanningAccumulatedUpgradeRecipe extends ScanningRecipe<UpgradeTransitiveDependencyVersion.DependencyVersionState> {
         @Override
         public String getDisplayName() {
@@ -1323,7 +1302,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
 
         @Override
         public UpgradeTransitiveDependencyVersion.DependencyVersionState getInitialValue(ExecutionContext ctx) {
-            return new UpgradeTransitiveDependencyVersion.DependencyVersionState("com.fasterxml*", "jackson-core");
+            return new UpgradeTransitiveDependencyVersion.DependencyVersionState();
         }
 
         @Override
